--- a/01_perxeptronTraining(MO).ipynb
+++ b/01_perxeptronTraining(MO).ipynb
@@ -6,7 +6,7 @@
       "name": "01_perxeptronTraining(MO).ipynb",
       "provenance": [],
       "mount_file_id": "12Pd_tHxPnE5wFIGpncl8-sUM8eM1oLaX",
-      "authorship_tag": "ABX9TyOBKVEodL8BcAREJMl146rj",
+      "authorship_tag": "ABX9TyMWBVzusqRP7g3oLDjj7zmQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,10 +73,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XZBXCORp8gUM",
-        "outputId": "b65edef9-2dd4-4acc-d90e-e337ab273ecf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8f1bcc4a-0a4a-486f-c75c-c4679b2891c5"
       },
       "source": [
         "xTrain=[0,1,2,3,4,5,...]\n",
@@ -84,7 +84,7 @@
         "xTrain=[i for i in range(21)]\n",
         "print(xTrain)"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,221 +98,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6GjDv_r--KRa",
-        "outputId": "f3169cad-ea2a-4322-c298-d10b9ac039de",
+        "id": "jbQqYO_o5nJq",
+        "outputId": "bf8c7e19-7201-465b-c6c4-3aafba434623",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "for i in range(10*20+1):\n",
-        "  print(i)"
+        "yTrain=[i for i in range(10*20+1)if i%10==0]\n",
+        "print(yTrain)"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4tcrXppI6VbE"
+      },
+      "source": [
+        "##Approch 1\n",
+        "\n",
+        "Definig a function for  the equation:y=10*x\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c8wGi29z7XPX",
+        "outputId": "1db7a34c-1c00-4d27-c19f-1fdcbc738dd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def tableofTen(x):\n",
+        "  y=10*x\n",
+        "  return y\n",
+        "\n",
+        "\n",
+        "for value in xTrain:\n",
+        "  print(tableofTen(value))"
+      ],
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
             "10\n",
-            "11\n",
-            "12\n",
-            "13\n",
-            "14\n",
-            "15\n",
-            "16\n",
-            "17\n",
-            "18\n",
-            "19\n",
             "20\n",
-            "21\n",
-            "22\n",
-            "23\n",
-            "24\n",
-            "25\n",
-            "26\n",
-            "27\n",
-            "28\n",
-            "29\n",
             "30\n",
-            "31\n",
-            "32\n",
-            "33\n",
-            "34\n",
-            "35\n",
-            "36\n",
-            "37\n",
-            "38\n",
-            "39\n",
             "40\n",
-            "41\n",
-            "42\n",
-            "43\n",
-            "44\n",
-            "45\n",
-            "46\n",
-            "47\n",
-            "48\n",
-            "49\n",
             "50\n",
-            "51\n",
-            "52\n",
-            "53\n",
-            "54\n",
-            "55\n",
-            "56\n",
-            "57\n",
-            "58\n",
-            "59\n",
             "60\n",
-            "61\n",
-            "62\n",
-            "63\n",
-            "64\n",
-            "65\n",
-            "66\n",
-            "67\n",
-            "68\n",
-            "69\n",
             "70\n",
-            "71\n",
-            "72\n",
-            "73\n",
-            "74\n",
-            "75\n",
-            "76\n",
-            "77\n",
-            "78\n",
-            "79\n",
             "80\n",
-            "81\n",
-            "82\n",
-            "83\n",
-            "84\n",
-            "85\n",
-            "86\n",
-            "87\n",
-            "88\n",
-            "89\n",
             "90\n",
-            "91\n",
-            "92\n",
-            "93\n",
-            "94\n",
-            "95\n",
-            "96\n",
-            "97\n",
-            "98\n",
-            "99\n",
             "100\n",
-            "101\n",
-            "102\n",
-            "103\n",
-            "104\n",
-            "105\n",
-            "106\n",
-            "107\n",
-            "108\n",
-            "109\n",
             "110\n",
-            "111\n",
-            "112\n",
-            "113\n",
-            "114\n",
-            "115\n",
-            "116\n",
-            "117\n",
-            "118\n",
-            "119\n",
             "120\n",
-            "121\n",
-            "122\n",
-            "123\n",
-            "124\n",
-            "125\n",
-            "126\n",
-            "127\n",
-            "128\n",
-            "129\n",
             "130\n",
-            "131\n",
-            "132\n",
-            "133\n",
-            "134\n",
-            "135\n",
-            "136\n",
-            "137\n",
-            "138\n",
-            "139\n",
             "140\n",
-            "141\n",
-            "142\n",
-            "143\n",
-            "144\n",
-            "145\n",
-            "146\n",
-            "147\n",
-            "148\n",
-            "149\n",
             "150\n",
-            "151\n",
-            "152\n",
-            "153\n",
-            "154\n",
-            "155\n",
-            "156\n",
-            "157\n",
-            "158\n",
-            "159\n",
             "160\n",
-            "161\n",
-            "162\n",
-            "163\n",
-            "164\n",
-            "165\n",
-            "166\n",
-            "167\n",
-            "168\n",
-            "169\n",
             "170\n",
-            "171\n",
-            "172\n",
-            "173\n",
-            "174\n",
-            "175\n",
-            "176\n",
-            "177\n",
-            "178\n",
-            "179\n",
             "180\n",
-            "181\n",
-            "182\n",
-            "183\n",
-            "184\n",
-            "185\n",
-            "186\n",
-            "187\n",
-            "188\n",
-            "189\n",
             "190\n",
-            "191\n",
-            "192\n",
-            "193\n",
-            "194\n",
-            "195\n",
-            "196\n",
-            "197\n",
-            "198\n",
-            "199\n",
             "200\n"
           ],
           "name": "stdout"
